test_suite/tests/ui/enum-representation/untagged-struct.stderr
error: #[serde(untagged)] can only be used on enums
 --> $DIR/untagged-struct.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

